lab/rabbitmq/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wasp
  labels:
    istio-injection: enabled
