lab/rabbitmq/serviceentry.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: whale-rmq-cloudamqp-com
  namespace: wasp
spec:
  hosts:
    - whale.rmq.cloudamqp.com

  location: MESH_EXTERNAL

  ports:
    - number: 5672
      name: amqp
      protocol: TCP
      targetPort: 5672

  resolution: DNS
